--- a/Latihan/latihan3/l3c233040089.css
+++ b/Latihan/latihan3/l3c233040089.css
@@ -12,9 +12,16 @@ h1 {
 
 h3 a {
     color: white;
+    
+}
+h3 a:hover {
+    color: red;
 }
 
-
+p a:hover {
+    color:white;
+    background-color: darkblue;
+}
 
 p { 
     font-family: Georgia;
